--- a/css/estilo.css
+++ b/css/estilo.css
@@ -432,17 +432,33 @@ h2 {
   background-color: #fff;
 }
 #proyecto #text-center {
-  padding: 40px 40px 20px 40px;
+  padding: 20px 40px 70px 40px;
 }
+
+#proyecto #text-center h1 {
+  margin-top: 20px;
+
+ 
+}
+
 #proyecto #text-center h2 {
   font-size: 1rem;
   color: #fff;
   background-color: #fe9c6f;
-  border-radius: 20px;
+  border-radius: 10px;
   padding: 10px;
+  margin-top: 16px;
+
+ 
 }
+
+#proyecto #text-center p{
+  margin-top: 20px;
+}
+
+
 #proyecto #proyect-img {
-  padding-bottom: 40px;
+  padding-bottom: 100px;
 }
 #proyecto #proyect-img img {
   width: 100%;
