--- a/scss/_proyectos.scss
+++ b/scss/_proyectos.scss
@@ -33,32 +33,42 @@
 
 #proyecto {
     background-color: #fff;
-
+  
     #text-center {
-        padding: 40px 40px 20px 40px;
-
-        h2 {
-            font-size: 1rem;
-            color: #fff;
-            background-color: $color-naranja;
-            border-radius: 20px;
-            padding: 10px;
-        }
+      padding: 40px 40px 70px 40px;
+  
+      h1 {
+        margin-top: 20px;
+      }
+  
+      h2 {
+        font-size: 1rem;
+        color: #fff;
+        background-color: #fe9c6f;
+        border-radius: 10px;
+        padding: 10px;
+        margin-top: 16px;
+      }
+  
+      p {
+        margin-top: 20px;
+      }
     }
-
+  
     #proyect-img {
-        padding-bottom: 40px;
-
-        img {
-            width: 100%;
-            padding: 0 20px 0 20px;
-        }
+      padding-bottom: 100px;
+  
+      img {
+        width: 100%;
+        padding: 0 20px 0 20px;
+      }
     }
-}
-
-#text-proyectos {
+  }
+  
+  #text-proyectos {
     padding-bottom: 15px;
-    color: $color-naranja;
-}
+    color: #fe9c6f;
+  }
+  
 
 /* proyectos */
